@@ -1,3 +1,10 @@
+2007-04-08  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Kristof Vansant <de_lupus@pandora.be>
+
+	* gnome-about-me.c: (about_me_image_clicked_cb): add image filter to
+	file chooser (closes bug #424958)
+
 2007-03-19  Jens Granseuer  <jensgr@gmx.net>
 
 	Based on a patch by: Bastien Nocera <hadess@hadess.net>
